--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,9 +25,11 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+
+  #di
+  get_it: ^5.0.6
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
