--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ build:
         - echo "building"
         - mkdir build
         - touch build/info.txt
+    artifacts:
+        paths:
+            - build/
 
 test:
     stage: test
