--- a/data/pubspec.yaml
+++ b/data/pubspec.yaml
@@ -1,8 +1,6 @@
 name: data
 description: A new Flutter package.
 version: 0.0.1
-author:
-homepage:
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -13,7 +11,7 @@ dependencies:
     sdk: flutter
 
   #Network
-  http: 0.12.1
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
